# spring-api-project

./: .gitignore  CLAUDE.md  README.md  TUTORIAL.md  pom.xml  pyproject.toml
.claude/plan/: CONVENTIONS.md  FEED_DESIGN.md  IMPLEMENTATION_PLAN.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  db-wiki-research.md
db_wiki/cli/: app.py
db_wiki/core/: config.py  models.py  queries.py  query_schema.py  schema.py  store.py
db_wiki/cross/: export.py  reader.py  store.py
db_wiki/daemon/: scheduler.py
db_wiki/export/: ddl_annotated.py  json_schema.py  markdown.py  mermaid.py  runner.py
db_wiki/graph/: bfs.py
db_wiki/ingest/: __init__.py  ddl_parser.py  (+1 more)
tests/: conftest.py  test_agents.py  test_analyst_agent.py  test_bfs.py  test_cli.py  test_cli_ingest.py  test_cli_phase2.py  test_cli_phase4.py  test_cli_phase5.py  test_confidence.py  test_config.py  test_confirm.py  test_conflict_resolution.py  test_cross.py  test_daemon.py  test_ddl_parser.py  test_export.py  test_gap_detection.py  test_gap_detector.py  test_gap_scorer.py  test_learning_loop.py  test_learning_schema.py  test_orchestrator.py  test_pipeline.py  test_query_cache.py  test_query_classifier.py  test_query_context.py  test_query_executor.py  test_query_generator.py  test_query_pipeline.py  test_query_resolver.py  test_query_validator.py  test_query_wiki.py  test_schema_phase2.py  test_search.py  test_server.py  test_server_phase2.py  test_server_phase4.py  test_server_phase5.py  test_sp_parser.py  (+3 more)
(+130 files in other folders)
